Update: Table Responsive add overflow-y: hidden, work around for Chrome 61 bug with box-shadow and td/th

--- a/packages/clay/src/scss/components/_tables.scss
+++ b/packages/clay/src/scss/components/_tables.scss
@@ -362,3 +362,19 @@ th {
 		}
 	}
 }
+
+// Chrome 61.0.3163.100 bug, box-shadow on th td with .table-responsive causes
+// vertical scrollbar to appear.
+
+.table-responsive {
+	@each $breakpoint in map-keys($grid-breakpoints) {
+		$next: breakpoint-next($breakpoint, $grid-breakpoints);
+		$infix: breakpoint-infix($next, $grid-breakpoints);
+
+		&#{$infix} {
+			@include media-breakpoint-down($breakpoint) {
+				overflow-y: hidden;
+			}
+		}
+	}
+}
